--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-file-base64": "^1.0.3",
+    "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.3.0",
